--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,9 @@
   "presets": ["es2015", "react", "stage-2"],
   "plugins": [
     "transform-runtime",
+    "add-module-exports",
+    "transform-decorators-legacy",  /*需要放在class-properties上面*/
+    "transform-react-display-name",
     "transform-es2015-object-super",
     "transform-class-properties",
     ["transform-es2015-classes", {loose: true}]
