--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node build/server.dev.js",
+    "build": "node build/build.js",
+    "prd": "node --require babel-register build/server.prd.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +23,6 @@
     "axios": "^0.15.3",
     "bluebird": "^3.4.1",
     "express": "^4.14.0",
-    "glob": "^7.1.1",
     "immutable": "^3.8.1",
     "lodash": "^4.11.1",
     "react": "^15.0.1",
@@ -49,9 +50,9 @@
     "babel-register": "^6.7.2",
     "babel-runtime": "^6.6.1",
     "classnames": "^2.2.5",
+    "clean-webpack-plugin": "^0.1.15",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.23.1",
-    "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.26.0",
@@ -62,14 +63,12 @@
     "postcss-loader": "^0.8.2",
     "react-binding": "^0.8.0",
     "react-hot-loader": "^1.3.1",
-    "redbox-react": "^1.2.3",
     "redux-logger": "^2.6.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.15.0",
-    "webpack-merge": "^2.0.0",
     "webpack-stream": "^3.2.0",
     "weui": "^1.1.0"
   }
