--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-binding": "^0.8.0",
     "react-hot-loader": "^1.3.1",
     "redux-logger": "^2.6.1",
+    "serialize-javascript": "^1.3.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
